--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Ariane" class="rounded-circle" width="150" height="150"
+        <img src="img/avatar-perfil.png" alt="avatar da Ana Clara" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Ana Clara</p>
         <h1>Eu estou aprendendo Programação</h1>
